# esp32-camera-boilerplate-opencv

./: README.md
examples/main/: CMakeLists.txt  take_picture.cpp
